# todoist-tui

./: README.md  app_types.py  app_utils.py  main.py  md_sync.py  pyproject.toml  screens.py  ui_styles.py  views.py
tests/: support.py  test_app_utils.py  test_main_app.py  test_md_sync.py  test_screens.py  test_ui_styles.py  test_views.py
